--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         
 
         <h1>Anton</h1>
-        <h2>a game developer.</h2>
+        <h2>a Game Developer.</h2>
         <div class="pics">
             <img class="coding" src="images/computer.png" alt="coding-img">
             <img class="controller" src="images/controller.png" alt="controller-img">
@@ -35,7 +35,7 @@
         <div class="profile">
             <img class="profile-img" src="images/photo_1.jpg" alt="">
             <h2>Hello.</h2>
-            <p class="intro">I'm Anton, a game developer and a Web designer from Israel,My passion was always to develop games , and I accomplished it by learning coding. 
+            <p class="intro">I'm Anton, a Game Developer and a Web Designer from Israel, My passion was always to develop games, and I accomplished it by learning code. 
             </p>
         </div>
         <hr>
@@ -46,22 +46,22 @@
             <div class="skill-row">
                 <img class="unity" src="images/unitylogo.png" alt="UnityLogo-img">
                 <h3>C# & Unity</h3>
-                <p class="desc">I mastered the C# programming language , mainly to develop games with the Unity Engine, which provides the right tools to develop for PC,Android,iOS,Xbox,PlayStation platforms.</p>
+                <p class="desc">I mastered the C# programming language , mainly to develop games with the Unity Engine, which provides the right tools to develop for PC, Android, iOS, Xbox, PlayStation platforms.</p>
             </div>
 
             
             <div class="skill-row">
                 <img class="web-dev" src="images/web-development.png" alt="web-dev-img">
-                <h3>Front-end web development</h3>
-                <p class="desc">As a side hobbie I decided learn front-end web development, mastering the HTML,CSS,JavaScript,Bootstrap,Node.js and JQuery</p>
+                <h3>Front-end Web Development</h3>
+                <p class="desc">As a side hobbie I am learning front-end Web Development, mastering HTML, CSS, JavaScript, Bootstrap, Node.js and JQuery.</p>
             </div>
         </div>
 
         <hr>
         <div class="contact-me">
             <h2>Get In Touch</h2>
-            <h3>If you love games or websites as I do</h3>
-            <p class="contact-message">Want a to build a game ? or a website maybe ? lets talk about this!</p>
+            <h3>If you love games & websites as I do</h3>
+            <p class="contact-message">You are interested in building your own game or a website ?, lets talk about it!</p>
             <a class="btn" href="mailto:antonpas.dev@gmail.com">CONTACT ME</a>
         </div>
     </div>
