--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Anton Pasternak - Game developer</title>
-
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-
   <!-- Google Fonts -->
-
   <link rel="icon" href="css/favicon.ico">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +24,6 @@
 
 
   <!-- JS Scripts  -->
-
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
   </script>
@@ -51,7 +46,7 @@
     <h2 class="neon heading-title">a game developer.</h2>
     <div class="row">
       <div class="pics">
-        <img class="col-lg-2 col-md-3 " src="images/computer.png" alt="coding-img">
+        <img class="comp col-lg-2 col-md-3 " src="images/computer.png" alt="coding-img">
         <img class="icon col-lg-2 col-md-3 " src="images/controller.png" alt="controller-img">
         <img class="icon col-lg-2 col-md-3 " src="images/playing.png" alt="controller-img">
       </div>
@@ -70,8 +65,8 @@
     <div class="profile">
       <img class="profile-img" src="images/photo_1.jpg" alt="">
       <h2>Hello.</h2>
-      <p class="intro">I'm Anton, a game developer and a Web designer from Israel. My passion was always to develop
-        games which I accomplished by learning code
+      <p class="body-text intro">I'm Anton, a game developer and a Web designer from Israel. My passion was always to develop
+        games.
       </p>
     </div>
     <hr>
@@ -79,11 +74,11 @@
     <div class="skills">
 
       <h2>My Skills.</h2>
-      <div class="skill-row">
+      <div class="body-text skill-row">
         <img class="unity" src="images/unitylogo.png" alt="UnityLogo-img">
         <h3>C# & Unity</h3>
         <p class="desc">I mastered the C# programming language , mainly to develop games with the Unity Engine,
-          which provides the right tools to develop for PC ,Android ,iOS ,Xbox ,PlayStation platforms.</p>
+          which provides the right tools to develop for all platforms.</p>
       </div>
 
 
