Small bugs fixes

--- a/index.html
+++ b/index.html
@@ -77,13 +77,12 @@
       <div class="body-text skill-row">
         <img class="unity" src="images/unitylogo.png" alt="UnityLogo-img">
         <h3>C# & Unity</h3>
-        <p class="desc">I mastered the C# programming language , mainly to develop games with the Unity Engine,
-          which provides the right tools to develop for all platforms.</p>
+        <p class="body-text desc">I mastered the C# programming language , mainly to develop games with the Unity Engine,
+          which prbody-text ovides the right tools to develop for all platforms.</p>
       </div>
 
-
-      <div class="skill-row">
-        <img class="web-dev" src="images/web-development.png" alt="web-dev-img">
+      <div class="body-text skill-row">
+        <img class="image web-dev" src="images/web-development.png" alt="web-dev-img">
         <h3>Front-end web development</h3>
         <p class="desc">As a side hobbie I decided learn front-end web development, mastering the
           HTML,CSS,JavaScript,Bootstrap,Node.js and JQuery</p>
@@ -98,7 +97,7 @@
       <div class="card-holder row">
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -118,7 +117,7 @@
         </div>
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -138,7 +137,7 @@
         </div>
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -159,7 +158,7 @@
 
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -179,7 +178,7 @@
         </div>
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -199,7 +198,7 @@
         </div>
         <div class="col-md-4">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
