--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
         <img class="unity" src="images/unitylogo.png" alt="UnityLogo-img">
         <h3>C# & Unity</h3>
         <p class="body-text desc">I mastered the C# programming language , mainly to develop games with the Unity Engine,
-          which prbody-text ovides the right tools to develop for all platforms.</p>
+          which provides the right tools to develop for all platforms.</p>
       </div>
 
       <div class="body-text skill-row">
         <img class="image web-dev" src="images/web-development.png" alt="web-dev-img">
         <h3>Front-end web development</h3>
         <p class="desc">As a side hobbie I decided learn front-end web development, mastering the
-          HTML,CSS,JavaScript,Bootstrap,Node.js and JQuery</p>
+          HTML ,CSS ,JavaScript ,Bootstrap ,Node.js and JQuery</p>
       </div>
     </div>
 
