Final Changes to Design
phone responsivity -fully checked.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="css/favicon.ico">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Russo+One&display=swap" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Russo+One&display=swap" rel="stylesheet">
 
 
   <!-- Font Awesome Script -->
@@ -65,8 +65,10 @@
     <div class="profile">
       <img class="profile-img" src="images/photo_1.jpg" alt="">
       <h2>Hello.</h2>
-      <p class="body-text intro">I'm Anton, a game developer and a Web designer from Israel. My passion was always to develop
-        games.
+      <p class="body-text intro">I’m Anton Pasternak. I’m a game developer and a web designer.
+        <br>
+        I love writing games in C# & Unity. I’m also learning a bit of 3D modelling and 2D art so that I can make more
+        games myself.
       </p>
     </div>
     <hr>
@@ -77,8 +79,9 @@
       <div class="body-text skill-row">
         <img class="unity" src="images/unitylogo.png" alt="UnityLogo-img">
         <h3>C# & Unity</h3>
-        <p class="body-text desc">I mastered the C# programming language , mainly to develop games with the Unity Engine,
-          which prbody-text ovides the right tools to develop for all platforms.</p>
+        <p class="body-text desc">I mastered the C# programming language , mainly to develop games with the Unity
+          Engine,
+          which provides the right tools to develop for all platforms.</p>
       </div>
 
       <div class="body-text skill-row">
@@ -95,9 +98,9 @@
     <div>
       <h2 class="projects">PROJECTS.</h2>
       <div class="card-holder row">
-        <div class="col-md-4">
+        <div class="col-lg-4 container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -115,9 +118,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -135,9 +138,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -156,9 +159,9 @@
           </div>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-lg-4 container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -176,9 +179,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4  container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -196,9 +199,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 container-sm">
           <div class="inner-card card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top"  height="225" xmlns="http://www.w3.org/2000/svg"
+            <svg class="bd-placeholder-img card-img-top" height="225" xmlns="http://www.w3.org/2000/svg"
               preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
               <title>Placeholder</title>
               <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef"
@@ -225,7 +228,7 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you love games or websites as I do</h3>
-      <p class="contact-message">Want to build a game ? or a Website maybe ? lets talk about this!</p>
+      <p class="contact-message">Want to build a game ? or a Website ? lets talk about this!</p>
       <a class="btn-cntc" href="mailto:antonpas.dev@gmail.com">CONTACT ME</a>
     </div>
 
